nais/network-policy-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: dataproduct-apps-collect
  name: dataproduct-apps-apiserver
  namespace: aura
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.2/32
  podSelector:
    matchLabels:
      app: dataproduct-apps-collect
  policyTypes:
  - Egress
